# py_amr2fred

./: .gitignore  README.md  TODO.md  __init__.py  adjectives.json  amr2fred.py  couple.py  digraph_writer.py  glossary.py  node.py  parser.py  propbank.py  pyproject.toml  rdf_writer.py  requirements.txt  taf_post_processor.py  test_amr2fred.py  test_couple.py  test_digraph_writer.py  test_node.py  test_propbank.py  test_rdf_writer.py
docs/: requirements.txt
docs/source/: amr2fred.rst  conf.py  contributing.rst  couple.rst  digraph_writer.rst  glossary.rst  index.rst  installation.rst  node.rst  parser.rst  propbank.rst  rdf_writer.rst  taf_post_processor.rst  usage.rst
examples/: amr2fred_output.ttl  check.dot  text_translation_example.py
py_amr2fred/: README.md  __init__.py  amr2fred.py  config_manager.py  couple.py  digraph_writer.py  exception_handler.py  glossary.py  node.py  node_core.py  node_refactored.py  node_relations.py  parser.py  propbank.py  rdf_writer.py  singleton_mixin.py  taf_post_processor.py  txt2amr.py  uri_builder.py
py_amr2fred/config/: amr_entities.json  amr_patterns.json  api_endpoints.json  data_sources.json  linguistic_data.json  namespaces.json  ontology_mappings.json  validation_patterns.json
py_amr2fred/interfaces/: Itxt2amr.py  __init__.py
tests/: test_amr2fred.py  test_config_manager.py  test_digraph_writer.py  test_node.py  test_node_refactored.py  test_propbank.py  test_rdf_writer.py  test_uri_builder.py
